lab1/Test/L1-A-3-71.cmm
struct CX int ;
+ struct vdQsIG koIb ( ) {
  int uGH0Wp2f11SJeXUolJ = ! SfkkA16PgEz2B9mpi - XuZi4MqDVFqTcu 
    != x <= hqDB7vUX , PVHHC1J1IKZjLjp = ~cskwS2s ;
  struct {
  }:evbATd9Mbw , F7r26jAT8lcr ;
'}
] return 